--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 // Масив типів контенту кожного маркера, заповнюється значеннями: зображення, модель, відео
                 const modes = ["model"];
                 // Масив файлів моделей, якщо немає моделі буде додано порожній рядок
-                const modelFiles = ["untitled.glb"];
+                const modelFiles = ["untitled.gltf"];
                 // Масив файлів зображень, якщо немає зображення буде додано також порожній рядок
                 const imageFiles = [""];
                 // Масив файлів відео, якщо немає відео буде ще один порожній рядок
@@ -212,7 +212,7 @@
                                     object.scale.set(0.01, 0.01, 0.01);
                                     // Ви можете самостійно змінити поворот або позицію моделі
                                     // object.position.set(0, Math.PI / 2, Math.PI / 4);
-                                    // object.rotation.set(0, Math.PI / 2, Math.PI / 4);
+                                    object.rotation.set(0, Math.PI, 0);
                                     // Додавання нашої моделі до контейнера групи маркерів
                                     markerRoots[i].add(object);
                                     resolve(modelFiles[i])
