--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                     object.scale.set(0.01, 0.01, 0.01);
                                     // Ви можете самостійно змінити поворот або позицію моделі
                                     // object.position.set(0, Math.PI / 2, Math.PI / 4);
-                                    object.rotation.set(0, Math.PI, Math.PI);
+                                    // object.rotation.set(0, Math.PI, Math.PI);
                                     // Додавання нашої моделі до контейнера групи маркерів
                                     markerRoots[i].add(object);
                                     resolve(modelFiles[i])
